# libmodapi

./: .gitignore  .gitmodules  .mailmap  CMakeLists.txt  SharemindLibModapiConfig.cmake.in  SharemindLibModapiConfigVersion.cmake.in  SharemindLibmodapiConfig.cmake.in  SharemindLibmodapiConfigVersion.cmake.in
src/: api.h  api_0x1.h  apis.c  apis.h  facilitymap.c  facilitymap.h  lasterror.h  libmodapi.h  libmodapicxx.h  locks.h  modapi.c  modapi.h  module.c  module.h  module_0x1.c  module_0x1.h  pd.c  pd.h  pd_0x1.c  pd_0x1.h  pdk.c  pdk.h  pdpi.c  pdpi.h  pdpi_0x1.c  pdpi_0x1.h  rlocks.h  syscall.c  syscall.h  tag.h
src/libsmmod/: api_0x1.h  apis.c  apis.h  facilitymap.h  libsmmod.h  modapi.c  modapi.h  modapi_0x1.c  modapi_0x1.h  modapi_0x1_internal.h  modapi_internal.h  module.c  module.h  module_0x1.c  module_0x1.h  pd.c  pd.h  pd_0x1.c  pd_0x1.h  pdk.c  pdk.h  pdkmap.c  pdkmap.h  pdpi.c  pdpi.h  pdpi_0x1.c  pdpi_0x1.h  syscall.c  syscall.h  syscallmap.c  syscallmap.h
src/sharemind/: CMakeLists.txt  SharemindLibmodapiConfigVersion.cmake.in
src/sharemind/libmodapi/: api.h  api_0x1.h  apis.c  apis.h  facilitymap.c  facilitymap.h  libmodapi.h  modapi.c  modapi.h  module.c  module.h  module_0x1.c  module_0x1.h  pd.c  pd.h  pd_0x1.c  pd_0x1.h  pdk.c  pdk.h  pdpi.c  pdpi.h  pdpi_0x1.c  pdpi_0x1.h  syscall.c  syscall.h
src/sharemind/libsmmod/: api_0x1.h  facilitymap.h  libsmmod.h  modapi.h  module.c  module.h  pd.h  pd_0x1.c  pdk.c  pdk.h  pdpi.h  pdpi_0x1.c  syscall.h
